--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
+    <!--登录界面-->
     <string name="app_name">TEST</string>
+    <string name="hint_name">用户名</string>
+    <string name="hint_password">密码</string>
+    <string name="login">login</string>
+    <string name="signin">sign in</string>
+    <string name="about">2019.4.17  tys</string>
+    <!--注册界面-->
+    <string name="hint_passwordAgin">再次输入密码</string>
 </resources>
